fixes nav issue where you could see behind images

--- a/app/themes/waterboys/styles/bundle.css
+++ b/app/themes/waterboys/styles/bundle.css
@@ -724,6 +724,7 @@ Example showing how to change the color/size of the icons:
   background: url('../assets/wb__nav-ourmission-color-bg.jpg');
   background-position: center center;
   background-size: cover;
+  background-color: #323639;
 }
 
 .nav-item-donate {
@@ -737,6 +738,7 @@ Example showing how to change the color/size of the icons:
   background: url('../assets/wb__nav-donate-color-bg.jpg');
   background-position: center center;
   background-size: cover;
+  background-color: #323639;
 }
 
 .nav-item-initiatives {
@@ -750,6 +752,7 @@ Example showing how to change the color/size of the icons:
   background: url('../assets/wb__nav-specialteams-color-bg.jpg');
   background-position: center center;
   background-size: cover;
+  background-color: #323639;
 }
 
 .nav-item-waterboys {
@@ -763,6 +766,7 @@ Example showing how to change the color/size of the icons:
   background: url('../assets/wb__nav-roster-color-bg.jpg');
   background-position: center center;
   background-size: cover;
+  background-color: #323639;
 }
 
 .nav-item-social {
@@ -776,6 +780,7 @@ Example showing how to change the color/size of the icons:
   background: url('../assets/wb__nav-connect-color-bg.jpg');
   background-position: center center;
   background-size: cover;
+  background-color: #323639;
 }
 
 .wb__nav-overflow {
@@ -1079,11 +1084,13 @@ Example showing how to change the color/size of the icons:
 #printTotal{
   position: absolute;
   z-index: -1000;
+  color: #fff;
 }
 
 #fundTotal {
     position: absolute;
     z-index: -1000;
+    color: #fff;
 }
 
 .roster .rs___slider-flex-ctn {
