--- a/app/themes/waterboys/styles/wb__player.css
+++ b/app/themes/waterboys/styles/wb__player.css
@@ -129,11 +129,13 @@
 #printTotal{
   position: absolute;
   z-index: -1000;
+  color: #fff;
 }
 
 #fundTotal {
     position: absolute;
     z-index: -1000;
+    color: #fff;
 }
 
 .roster .rs___slider-flex-ctn {
